--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,64 @@
   {
    "src": "pages/auth/index.html",
    "use": "@vercel/static"
+  },
+  {
+   "src": "pages/about/index.html",
+   "use": "@vercel/static"
+  },
+  {
+   "src": "pages/inspector/**/*",
+   "use": "@vercel/static"
+  },
+  {
+   "src": "pages/admin/**/*",
+   "use": "@vercel/static"
+  },
+  {
+   "src": "scripts/**/*",
+   "use": "@vercel/static"
+  },
+  {
+   "src": "css/**/*",
+   "use": "@vercel/static"
+  },
+  {
+   "src": "assets/**/*",
+   "use": "@vercel/static"
   }
  ],
  "routes": [
   {
    "src": "/auth",
    "dest": "/pages/auth/index.html"
+  },
+  {
+   "src": "/about",
+   "dest": "/pages/about/index.html"
+  },
+  {
+   "src": "/inspector",
+   "dest": "/pages/inspector/inspector.html"
+  },
+  {
+   "src": "/admin",
+   "dest": "/pages/admin/admin.html"
+  },
+  {
+   "src": "/scripts/(.*)",
+   "dest": "/scripts/$1"
+  },
+  {
+   "src": "/css/(.*)",
+   "dest": "/css/$1"
+  },
+  {
+   "src": "/assets/(.*)",
+   "dest": "/assets/$1"
+  },
+  {
+   "src": "/pages/(.*)",
+   "dest": "/pages/$1"
   }
  ]
 }
